Fix scrollbar showing on minimap

--- a/src/visualization/display/side-panel/panels/minimap/attached/attached.css
+++ b/src/visualization/display/side-panel/panels/minimap/attached/attached.css
@@ -1,7 +1,7 @@
 .panel__attached {
   align-items: center;
   display: flex;
-  height: calc(100vh - 175px);
+  height: calc(100vh - 185px);
   justify-content: center;
   margin-top: 10px;
 }
